# dmtaclass

./: .gitignore  LICENSE  Makefile  pyproject.toml
.github/workflows/: run_test.yml
src/dmtaclasses/: _callbacks.py  dmtaclasses.py  dmtaclasses.pyi
src/dmtaclasses.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test_dmtaclasses/: __init__.py  usage_test.py
